--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "fs": "^0.0.1-security",
     "next": "13.2.4",
     "openai": "^3.1.0",
     "react": "18.2.0",
