--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "express": "^4.18.2",
+    "formidable": "^2.1.1",
     "fs": "^0.0.1-security",
     "next": "13.2.4",
+    "nodemon": "^2.0.22",
     "openai": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
